removed deprecated functions, changed to static bitrate of 64k instead of quality preset, removed unnecessary imports